# codlab

./: .gitignore  .lazy.lua  .nvim.init.lua  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: book.yml  ci.yml  nix.yml
.helix/: config.toml  languages.toml
book/: book.toml  mermaid.min.js
book/src/: SUMMARY.md  TODO.md  random-links.md  related-projects.md  why-its-complicated.md
demo/: demo.cast  layout.kdl
dev/: docker-compose.yml  otel-collector-config.yaml
editors/vscode/: README.md  package.json  tsconfig.json
editors/vscode/client/: tsconfig.tsbuildinfo
editors/vscode/client/src/: extension.ts
nix/: devshell.nix
nix/nixosModules/: default.nix
nix/pkgs/: default.nix
nix/tests/: default.nix  lib.nix  pre-commit.nix  simple.nix  simple.py
nix/tests/cases/: simple.nix
nix/tests/common/: auto-login.nix  client.nix  helix.nix  home.nix  server.nix  virt.nix  wm.nix
nix/tests/common/obs/: default.nix
nix/tests/common/obs/obs-studio/: global.ini
nix/tests/common/obs/obs-studio.bak/: user.ini
nix/tests/common/obs/obs-studio.bak/basic/scenes/: Untitled.json
nix/tests/common/obs/obs-studio.bak/plugin_config/obs-websocket/: config.json
nix/tests/common/obs/obs-studio/basic/profiles/Untitled/: basic.ini
nix/tests/common/obs/obs-studio/basic/scenes/: Untitled.json
nix/tests/common/obs/obs-studio/plugin_config/rtmp-services/: amazon_ivs_ingests.json
src/: change.rs  common.rs  lib.rs  logger.rs  main.rs  messages.rs  peekable_channel.rs  telemetry.rs
tests/: integration_test.rs  mocked_client.rs  mocked_client_proptest.proptest-regressions  mocked_client_proptest.rs  test_changes.proptest-regressions  test_changes.rs
tests/common/: lsp_client.rs  mod.rs  proptest_structs.rs
