cargo-features = ["edition2024"]
[package]
name = "codlab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-lsp = { version = "0.2.2", features = ["async-io", "tokio"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.26.2"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.16"
async-process = "2.3.0"
