cargo-features = ["edition2024"]

[package]
name = "codlab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-lsp = { version = "0.2.2", features = ["async-io", "tokio"] }
automerge = "0.6.0"
autosurgeon = "0.8.7"
futures = "0.3.31"
operational-transform = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.26.2"
tower = "0.5.2"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

# Telemetry
opentelemetry = { version = "0.29.0", optional = true }
opentelemetry-otlp = { version = "0.29.0", optional = true }
opentelemetry-appender-tracing = { version = "0.29.1", optional = true }
opentelemetry_sdk = { version = "0.29.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
async-process = "2.3.0"
proptest = { version = "1.6.0", features = ["proptest-macro"] }
proptest-derive = "0.5.1"

[profile.test.package.proptest]
opt-level = 3

[features]
default = ["telemetry"]
# Usefull for debugging
telemetry = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry-appender-tracing", "dep:opentelemetry_sdk"]

